# wasmtime-rb

./: .gitignore  .rubocop.yml  .standard.yml  .yardopts  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Gemfile  NIGHTLY_VERSION  README.md  Rakefile  flake.nix  index.html  latest  wasmtime-rb.gemspec  wasmtime.gemspec
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: build-build-matrix.js
.github/workflows/: build-docs.yml  build-gems.yml  ci.yml  cross-gem.yml  memcheck.yml  publish-doc.yml  release.yml
automated-doc-pages/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
automated-doc-pages/Wasmtime/: Config.html  Engine.html  Error.html  Extern.html  Func.html  FuncType.html  Instance.html  Linker.html  Memory.html  MemoryType.html  Module.html  Store.html
bench/: bench.rb  compile.rb  component_id.rb  component_record_keys.rb  func_call.rb  host_call.rb  instantiate.rb
examples/: epoch.rb  externref.rb  fuel.rb  fuel.wat  gcd.rb  hello.rb  linking.rb  linking1.wat  memory.rb  multi.rb  wasi-p2.rb  wasi-stdout-stress.wasm  wasi.rb
examples/rust-crate/: Cargo.toml
examples/rust-crate/src/: lib.rs
examples/wasi-write-stream/: Cargo.toml
ext/: Cargo.toml  build.rs  extconf.rb
ext/src/: lib.rs
ext/src/helpers/: file_stdin_stream.rs  macros.rs  mod.rs  nogvl.rs  output_limited_buffer.rs  static_id.rs  symbol_enum.rs  tmplock.rs  wrapped_struct.rs
ext/src/ruby_api/: caller.rs  component.rs  config.rs  convert.rs  engine.rs  errors.rs  export.rs  externals.rs  func.rs  func_type.rs  global.rs  global_type.rs  instance.rs  instance_pre.rs  linker.rs  macros.rs  memory.rs  memory_type.rs  mod.rs  module.rs  params.rs  pooling_allocation_config.rs  static_id.rs  store.rs  table.rs  table_type.rs  to_ruby_value.rs  trap.rs  wasi.rs  wasi_config.rs  wasi_context.rs  wasi_ctx.rs  wasi_ctx_builder.rs  wasi_deterministic_ctx_builder.rs
ext/src/ruby_api/component/: convert.rs  func.rs  instance.rs  linker.rs  types.rs  wasi_command.rs
ext/src/ruby_api/config/: tracked_memory_creator.rs
ext/src/ruby_api/memory/: slice.rs  unsafe_slice.rs
lib/: wasmtime.rb
lib/wasmtime/: component.rb  error.rb  trap_code.rb  version.rb
main/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
main/Wasmtime/: Caller.html  Component.html  Config.html  ConversionError.html  Engine.html  Error.html  Extern.html  Func.html  (+19 more)
rakelib/: bench.rake  compile.rake  doc.rake  env.rake  examples.rake  helpers.rake  mem.rake  pkg.rake  spec.rake
scripts/: generate-changelog.sh
spec/: convert_spec.rb  spec_helper.rb  wasmtime_spec.rb
spec/fixtures/host-func-imports/: .gitignore  Cargo.toml  README.md
spec/fixtures/host-func-imports/src/: lib.rs
spec/fixtures/host-func-imports/wit/: world.wit
suppressions/: readme.md  ruby-3.1.supp  ruby-3.2.supp
v0.3.0/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v0.4.1/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v2.0.2-alpha1/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v24.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v25.0.0/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v25.0.1/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v25.0.2/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v26.0.0/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  top-level-namespace.html
v27.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v28.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v29.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v30.0.2/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v31.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v32.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v33.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v34.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v36.0.0/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  top-level-namespace.html
v37.0.2/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v38.0.4/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v39.0.1/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v41.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v41.0.1/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v42.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v42.0.1/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v43.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v43.0.1/: Wasmtime.html  _index.html  file.README.html  index.html  top-level-namespace.html
v44.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v45.0.0/: Wasmtime.html  _index.html  class_list.html  file.README.html  index.html  top-level-namespace.html
v5.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  top-level-namespace.html
v6.0.0/: Wasmtime.html  _index.html  file.README.html  index.html  method_list.html  notes.md  top-level-namespace.html
(+851 files in other folders)
