[workspace]
resolver = "2"
members = ["ext"]
exclude = ["examples/rust-crate"]

[profile.release]
codegen-units = 1 # more llvm optimizations
debug = 2 # make perfomance engineers happy
lto = "thin" # cross-crate inlining

[patch.crates-io]
rb-sys = { git = "https://github.com/oxidize-rb/rb-sys", branch = "allocator-check-vm" }
