[workspace]
resolver = "2"
members = ["ext"]
exclude = [
    "spec/fixtures/component-types",
    "spec/fixtures/wasi-debug",
    "spec/fixtures/wasi-deterministic",
    "spec/fixtures/host-func-imports",
]

[profile.release]
codegen-units = 1 # more llvm optimizations
strip = true      # strip debug symbols
lto = "thin"      # cross-crate inlining
