[package]
name = "wasmtime-rb"
version = "36.0.0"
edition = "2021"
authors = ["The Wasmtime Project Developers"]
license = "Apache-2.0"
publish = false
build = "build.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ruby_gte_3_0)'] }

[features]
default = ["tokio", "all-arch", "winch"]
tokio = ["dep:tokio", "dep:async-timer"]
all-arch = ["wasmtime/all-arch"]
winch = ["wasmtime/winch"]

[dependencies]
async-trait = "*" # Needed for `OutputLimitedBuffer`. Use wasmtime's version.
bytes = "*" # Needed for `OutputLimitedBuffer`. Use wasmtime's version.
lazy_static = "1.5.0"
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = { version = "*", default-features = false, features = [
  "stable-api-compiled-fallback",
] }
wasmtime = { version = "=39.0.1", features = ["memory-protection-keys"] }
wasmtime-wasi = "=38.0.4"
cap-std = "3.4.5"
wat = "1.242.0"
tokio = { version = "1.47.1", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "net",
], optional = true }
async-timer = { version = "1.0.0-beta.15", features = [
  "tokio1",
], optional = true }
static_assertions = "1.1.0"
wasmtime-environ = "=38.0.4"
deterministic-wasi-ctx = { version = "=3.0.3" }

[build-dependencies]
rb-sys-env = "0.2.2"
